# culinary-portal

./: .gitignore  README.md  db.sqlite3  pyproject.toml
conf/: settings.py  urls.py
cooking/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py  yasg.py
cooking/migrations/: 0001_initial.py  0002_alter_category_options_alter_post_category_comment.py  0003_post_author.py
cooking/templates/cooking/: index.html  password_change_form.html  post_add_form.html  post_confirm_delete.html  post_detail.html  profile.html  sign_in_form.html  sign_up_form.html
cooking/templates/cooking/components/: _category_buttons.html  _post_list.html
cooking/templates/swagger/: swagger_ui.html
cooking/templatetags/: blog_tags.py
templates/: base.html
templates/components/: _footer.html  _form_errors.html  _navbar.html
